--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html ng-app="flex">
+<html ng-app="FlexUI">
 <head>
   <meta charset="utf-8">
   <meta name="description" content="">
@@ -25,29 +25,17 @@
 <![endif]-->
 
 <div class="container">
-  <flex-section>
-    <flex-box>
-      <span>hello world</span>
-    </flex-box>
-    <flex-box flex="2">
-      <span>I love flex box</span>
-    </flex-box>
-    <flex-box>
-      <span>other</span>
-    </flex-box>
+  <flex-section height="200">
+    <flex-box flex="1">titleOne</flex-box>
+    <flex-box flex="2">titleTwo</flex-box>
+    <flex-box flex="1">titleThree</flex-box>
   </flex-section>
-  <flex-section col="true" height="300">
-    <flex-box left-around="true">
-      <span>hello world</span>
-      <span>hello world</span>
-    </flex-box>
-    <flex-box>
-      <span>I love flex box</span>
-    </flex-box>
-    <flex-box>
-      <span>other</span>
-    </flex-box>
+  <flex-section height="200" class="column">
+    <flex-box flex="2">titleOne</flex-box>
+    <flex-box flex="1">titleTwo</flex-box>
+    <flex-box flex="2">titleThree</flex-box>
   </flex-section>
+
 </div>
 
 <!-- build:js scripts/vendor.js -->
@@ -57,7 +45,14 @@
 <!-- endbuild -->
 
 <!-- build:js scripts/main.js -->
+<script src="scripts/index.js"></script>
 <script src="scripts/main.js"></script>
+<script src="scripts/flex.server.js"></script>
+<script src="scripts/flex-section.directive.js"></script>
+<script src="scripts/flex-box.directive.js"></script>
+<script src="scripts/flex-list.directive.js"></script>
+<script src="scripts/flex-item.directive.js"></script>
+<script src="scripts/flex-button.directive.js"></script>
 <!--<script src="scripts/index.js"></script>-->
 
 <!-- endbuild -->
