修复 index.html js 依赖问题

--- a/app/index.html
+++ b/app/index.html
@@ -1,4 +1,5 @@
 <!doctype html>
+<!--suppress ALL -->
 <html ng-app="FlexUI">
 <head>
   <meta charset="utf-8">
@@ -45,7 +46,7 @@
 <!-- endbuild -->
 
 <!-- build:js scripts/main.js -->
-<script src="scripts/main.js"></script>
+<script src="scripts/flex.module.js"></script>
 <script src="scripts/flex.server.js"></script>
 <script src="scripts/flex-section.directive.js"></script>
 <script src="scripts/flex-box.directive.js"></script>
